--- a/package.json
+++ b/package.json
@@ -2,10 +2,29 @@
   "name": "suridaisuki-framework",
   "version": "0.0.0",
   "description": "ホームページ「数理大好き」のメインフレームワークです",
+  "scripts": {
+    "dev": "next",
+    "build": "next build",
+    "export": "next export"
+  },
   "repository": {
     "type": "git",
     "url": "git+https://github.com/k27c8ff627uxz/suridaisuki-framework.git"
   },
   "author": "k27c8ff627uxz",
-  "homepage": "http://proofcafe.org/k27c8/math/"
+  "homepage": "http://proofcafe.org/k27c8/math/",
+  "dependencies": {
+    "next": "^10.0.5",
+    "react": "^17.0.1",
+    "react-dom": "^17.0.1",
+    "react-redux": "^7.2.2",
+    "redux": "^4.0.5"
+  },
+  "devDependencies": {
+    "@types/node": "^14.14.20",
+    "@types/react": "^17.0.0",
+    "@types/react-dom": "^17.0.0",
+    "@types/react-redux": "^7.1.15",
+    "typescript": "^4.1.3"
+  }
 }
