--- a/package.json
+++ b/package.json
@@ -25,6 +25,10 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-redux": "^7.1.15",
+    "@typescript-eslint/eslint-plugin": "^4.12.0",
+    "@typescript-eslint/parser": "^4.12.0",
+    "eslint": "^7.17.0",
+    "eslint-plugin-react": "^7.22.0",
     "typescript": "^4.1.3"
   }
 }
