--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
+    "react-jsx-parser": "^1.28.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5"
   },
