--- a/package.json
+++ b/package.json
@@ -14,13 +14,15 @@
   "author": "k27c8ff627uxz",
   "homepage": "http://proofcafe.org/k27c8/math/",
   "dependencies": {
+    "copy-webpack-plugin": "^6.3.2",
     "next": "^10.0.5",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-jsx-parser": "^1.28.3",
     "react-redux": "^7.2.2",
-    "redux": "^4.0.5"
+    "redux": "^4.0.5",
+    "webpack": "^5.21.2"
   },
   "devDependencies": {
     "@types/node": "^14.14.20",
