--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "webpack": "^5.21.2"
   },
   "devDependencies": {
+    "@types/gtag.js": "0.0.4",
     "@types/node": "^14.14.20",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
