--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "next": "^10.0.5",
     "node-sass": "^5.0.0",
     "react": "^17.0.1",
+    "react-adsense": "^0.1.0",
     "react-dom": "^17.0.1",
     "react-jsx-parser": "^1.28.3",
     "react-mathjax": "^1.0.1",
