--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "suridaisuki-framework",
   "version": "0.0.0",
   "description": "ホームページ「数理大好き」のメインフレームワークです",
+  "engines": {
+    "node": "15.14.0"
+  },
   "scripts": {
     "dev": "next",
     "build": "next build",
@@ -15,14 +18,14 @@
   "homepage": "http://proofcafe.org/k27c8/math/",
   "dependencies": {
     "copy-webpack-plugin": "^6.3.2",
-    "next": "^10.0.5",
-    "node-sass": "^5.0.0",
+    "next": "^12.2.5",
     "react": "^17.0.1",
     "react-adsense": "^0.1.0",
     "react-dom": "^17.0.1",
     "react-jsx-parser": "^1.28.3",
     "react-redux": "^7.2.2",
     "redux": "^4.0.5",
+    "sass": "^1.54.5",
     "webpack": "^5.21.2"
   },
   "devDependencies": {
